# Battleships

./: .gitignore  CMakeLists.txt  README.md
include/: computerplayer.hpp  field.hpp  game.hpp  humanplayer.hpp  initstate.hpp  player.hpp  utils.hpp
src/: computerplayer.cpp  field.cpp  game.cpp  humanplayer.cpp  initstate.cpp  main.cpp
